--- a/ui/src/components/AspectRatio/AspectRatio.css
+++ b/ui/src/components/AspectRatio/AspectRatio.css
@@ -1,5 +1,5 @@
-@import "../../../styles/space.css";
-@import "../../../styles/tokens/colors.css";
+/* Import all design system tokens */
+@import "../../../styles/index.css";
 
 .aspect-ratio {
   width: 100%;
