--- a/ui/src/components/ButtonTags/ButtonTags.css
+++ b/ui/src/components/ButtonTags/ButtonTags.css
@@ -1,6 +1,5 @@
-@import "../../../styles/tokens/colors.css";
-@import "../../../styles/space.css";
-@import "../../../styles/fonts.css";
+/* Import all design system tokens */
+@import "../../../styles/index.css";
 
 /* Button Tags Container */
 .button-tags {
