--- a/ui/src/components/Icon/Icon.css
+++ b/ui/src/components/Icon/Icon.css
@@ -1,7 +1,5 @@
-@import "../../../styles/icons.css";
-@import "../../../styles/tokens/colors.css";
-@import "../../../styles/grid.css";
-@import "../../../styles/space.css";
+/* Import all design system tokens */
+@import "../../../styles/index.css";
 
 /* Icon showcase specific styles */
 .icon-showcase {
