--- a/ui/src/components/Input/Input.css
+++ b/ui/src/components/Input/Input.css
@@ -1,7 +1,5 @@
-@import "../../../styles/tokens/colors.css";
-@import "../../../styles/typography.css";
-@import "../../../styles/space.css";
-@import "../../../styles/fonts.css";
+/* Import all design system tokens */
+@import "../../../styles/index.css";
 
 /* Input Container */
 .input-field {
