--- a/ui/src/components/Typography/Typography.css
+++ b/ui/src/components/Typography/Typography.css
@@ -1,4 +1,5 @@
-@import "../../../styles/typography.css";
+/* Import all design system tokens */
+@import "../../../styles/index.css";
 
 .typography {
   margin: 0;
